crates/hir-ty/tests/snapshots/jls_false_flags__blank_final_after_exiting_if_branch.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    static final int sf;
    static {
        if ("x".length() > 0) {
            sf = 1;
            throw new RuntimeException();
        }
        sf = 2;
    }
}
