crates/hir-ty/tests/snapshots/jls_false_flags__blank_final_this_delegation_no_write.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    Final(int x) {
        f = 1;
    }
    Final() {
        this(1);
    }
}
