crates/hir-ty/tests/snapshots/jls_false_flags__blank_instance_final_in_instance_initializer.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    {
        f = 1;
    }
    Final() {
    }
}
