crates/hir-ty/tests/snapshots/jls_false_flags__blank_instance_final_qualified_this_in_constructor.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    Final() {
        this.f = 1;
    }
}
